[package]
name = "fromage"
description = "A cheesy Rust hack for converting between non-local types"
version = "0.1.1"
authors = ["FujiApple <fujiapple852@gmail.com>"]
repository = "https://github.com/fujiapple852/fromage"
readme = "README.md"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.86.0"
keywords = ["conversion", "coherence", "orphan-rules", "from", "traits"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]

[workspace]
members = ["tests/non-local"]

[dev-dependencies]
non-local = { path = "tests/non-local" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
